# psellos-builder

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/psellos_builder/: __init__.py  cli.py  layers.py  qa.py  smoke_layers.py
src/psellos_builder/builders/: __init__.py  compile.py  indexes.py  manifest.py
src/psellos_builder/exporters/: __init__.py  dist_writer.py
src/psellos_builder/validators/: __init__.py  assertions.py  schema.py
tests/: test_manifest.py
