[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "psellos-builder"
version = "0.1.0"
description = "Build pipeline and CLI for validating and compiling prosopographical datasets into static JSON artifacts."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "jsonschema",
]

[project.scripts]
psellos-builder = "psellos_builder.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
